# game_of_life

./: CMakeLists.txt  Makefile  README
inc/: BasicBoard.h  Board.h  BoardDisplay.h  Display.h  SparseBoard.h  StaticBoard.h
input/: glider.txt  glider_gun.txt  nova.txt
src/: BasicBoard.cpp  Board.cpp  Main.cpp  SparseBoard.cpp  main.cpp
