cmake_minimum_required (VERSION 2.8)
project ("Game of Life")
if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
	add_definitions("-std=c++11")
	add_executable(gol src/Main.cpp src/Board.cpp src/BasicBoard.cpp)
else()
	add_definitions(-DUNICODE)
	add_definitions(-D_UNICODE)
	include_directories("C:\\wxWidgets-3.0.2\\include")
	include_directories("C:\\wxWidgets-3.0.2\\include\\msvc")
	link_directories("C:\\wxWidgets-3.0.2\\lib\\vc_lib")
	add_executable(gol WIN32 src/Main.cpp src/Board.cpp src/BasicBoard.cpp src/Display.cpp)
endif()
include_directories(inc)